<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="wizard_script_uri">android.resource://com.odm.setupwizardoverlay/raw/custom_wizard_script</string>
    <string name="suw_next_button_label">Next</string>
    <string name="suw_back_button_label">Back</string>
    <string name="suw_more_button_label">More</string>
    <string name="suw_accept_button_label">Accept</string>
    <string name="device_setup">Setup Wizard</string>
    <string name="device_setup_summary">Complete the device setup process to get the most out of your device</string>
    <string name="done">Got it</string>
    <string name="summary_title">Ready to Go!</string>
    <string name="verizon_title">My Verizon</string>
    <string name="ask_verizon">Manage your Verizon Account</string>
    <string name="vzw_cloud">Cloud</string>
    <string name="vzw_cloud_summary_not_setup">Not set up</string>
    <string name="vzw_cloud_summary">Connect to your Verizon Cloud</string>
    <string name="vzw_cloud_summary_setup_complete">Settings selection complete</string>
    <string name="device_setup_body_1">Your phone is set up and ready to use.</string>
    <string name="device_setup_body_2">Remember, you can change your selections at any time in Settings.</string>
    <string name="device_setup_body_3">And you can manage your Verizon account and connect to your Verizon Cloud right from your phone.</string>
    <string name="setup_wizard_next_button_label">Next</string>
    <string name="setup_wizard_back_button_label">Back</string>
    <string name="product_surnia">surnia</string>
    <string name="product_ghost">ghost</string>
    <string name="product_clark">clark</string>
    <string name="pco_apn">VZWINTERNET</string>
    <string name="setup">Setup Wizard Overlay</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="no_sim">"Your phone needs a <font color="#ff55c5ce"> <xliff:g id="countdown">^1</xliff:g> </font> to work. You may not have inserted your SIM card yet or it may be inserted incorrectly.
            \n\n Please turn off your phone and make sure your SIM card is inserted as shown below. Then turn your phone back on."</string>
    <string name="sim_card">SIM card</string>
    <string name="corrupt_sim">Sorry, this SIM card is not readable. Please contact your wireless service provider.</string>
    <string name="wrong_operator_usc">This SIM card is from an unknown source.</string>
    <string name="wrong_operator_vzw">This SIM card is not from Verizon Wireless.</string>
    <string name="wrong_sim">Sorry, this SIM card is not supported. Please contact your wireless service provider.</string>
    <string name="customer_care_vzw">(877) 807-4646</string>
    <string name="customer_care_usc">1-888-944-9400</string>
    <string name="vzw_customer_service">(800) 922-0204</string>
    <string name="cold_sim_msg">"Sorry, we're having trouble activating your phone. Please call %1$s from another phone to activate your 4G LTE service and then try again by restarting your phone."</string>
    <string name="po_activate_sim_msg_new_order">Please note, the activation will take a few minutes.</string>
    <string name="po_activate_sim_msg_upgrade_order">"Before you activate this phone:
\u00091.\u0009Back up your contacts from your old phone.
\u00092.\u0009Turn off your old phone.

When you tap Activate Now, we will:
\u00091.\u0009Deactivate your old phone.
\u00092.\u0009Transfer your old phone number to this phone.
\u00093.\u0009Activate this phone."</string>
    <string name="po_activate_get_no_msg">Your activation has begun. Please wait while we get your phone ready to set up.</string>
    <string name="po_act_deact_phone_msg">"We need to deactivate your old phone before we can activate your new phone.
Remember to turn off your old phone."</string>
    <string name="po_prepare_activating_msg">"Once your phone is activated, we'll walk you through setting up your email and Verizon Cloud."</string>
    <string name="po_activate_title">Ready to Activate</string>
    <string name="po_authentication_title">Verify Your Account</string>
    <string name="what_is_billing_passwd"><u>What is a Billing Password?</u></string>
    <string name="po_act_get_no">Getting Phone Number</string>
    <string name="po_act_deact_phone">Deactivating Old Phone</string>
    <string name="po_prepare_activating">Preparing to Activate Your Phone</string>
    <string name="po_transfering_ph_no">Transferring Phone Number</string>
    <string name="po_transfering_ph_no_msg">"We're working on transferring your existing phone number to your new phone."</string>
    <string name="enterSsn">"To get started, enter the last 4 digits of the Account Owner's Social Security Number:"</string>
    <string name="enterBillingPassword">"To get started, enter your account's Billing Password"</string>
    <string name="billing_order_title">Billing Password</string>
    <string name="billing_passwd_another_way">"Want to verify another way?
"<u>"Use your account's Billing Password instead."</u></string>
    <string name="billing_passwd_text">"Its a password created by the Account Owner to use for account access instead of the last 4 digits of the Social Security Number.
Note: It is not the same as your My Verizon password."</string>
    <string name="retry_passwd_text">"This entry does not match our records.

Please try again."</string>
    <string name="retry_passwd_limit_exceeded_text">"Sorry, we're having trouble verifying your account.
 Please contact Verizon Wireless at (800) 922-0204."</string>
    <string name="acc_restricted_text">"To activate your phone, follow the instructions included with your new phone.

Or contact your organization's Verizon Wireless administrator and provide the following information:

Device ID: %1$s

SIM ID: %2$s"</string>
    <string name="acc_restricted_title">How to Activate Your Phone</string>
    <string name="lost_and_stolen_text">"Sorry, we're having trouble activating your phone. Please call (877) 807-4646 from another phone to activate your 4G LTE service and then try again."</string>
    <string name="po_timeout_msg">"Sorry, we're having trouble activating your phone.

Make sure you have a good signal (multiple bars). If you are indoors, try moving closer to a window or going outside.

Once your signal is good, you can try activating again by turning this phone off, then on again.

If this problem persists, please contact Customer Service at (800) 922-0204 for assistance."</string>
    <string name="release_failed">To activate your phone, call (800) 922-0204 from any phone other than your new phone.</string>
    <string name="release_failed_title">Something Went Wrong</string>
    <string name="inactive_sim">"Please wait while we activate your new phone. This may take up to %1$d minutes.
If you are moving your number from your old phone to this one, remember to keep your old phone turned off until activation is complete."</string>
    <string name="dialer_invalid_sim">This SIM card is not recognized or registered. Please contact your wireless service provider.</string>
    <string name="activated_sim">"A Verizon Wireless SIM card has activated your service and updated your phone's roaming capabilities.

Your phone number is %1$s."</string>
    <string name="loc_text_vzw">"Your phone can share its approximate location with apps and services like maps, shopping and weather. Read the privacy policy of any app or service provider you're considering to understand how they collect, use and share your location information before you use them."</string>
    <string name="phone_number_title">Your phone number is:</string>
    <string name="ok">OK</string>
    <string name="restart_phone">Restart phone</string>
    <string name="activation_failure">"Sorry, we're having trouble activating your phone.

If you're moving your phone number from your old phone to this one, make sure your old phone is turned off.

Also, make sure you have a good signal (multiple bars). If you are indoors, try moving closer to a window or going outside.

Once your signal is good, you can try activating again by turning this phone off, then on again."</string>
    <string name="phone_act_title">Phone Activation</string>
    <string name="sim_is_active_vzw">Verizon Wireless</string>
    <string name="sim_is_active_usc">Your new</string>
    <string name="sim_is_active">phone is now active.</string>
    <string name="restart">Restart to Continue</string>
    <string name="wait">Please wait, this may take a few minutes.</string>
    <string name="wait_skip">Please wait while we skip setup.</string>
    <string name="service_start">It may take up to 15 minutes for service to start.</string>
    <string name="loc_text_usc">Data usage for downloading, using and updating apps will be billed according to your plan.</string>
    <string name="dlgtitle">Setup Wizard Warning</string>
    <string name="exit_setup">Are you sure you want to leave the Setup Wizard? If you leave now, you will skip important steps in setting up your phone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="airplane_mode_title">Airplane mode on</string>
    <string name="airplane_mode_message">You cannot get the sim status while the device is in airplane mode. Would you like to turn airplane mode off?</string>
    <string name="dialer_cold_sim">Sorry, this SIM card is not registered. Please call (877) 807-4646 from another phone.</string>
    <string name="leave">Leave Setup</string>
    <string name="return_to_wizard">Return to Setup</string>
    <string name="wi_fi">Use Wi-Fi</string>
    <string name="wifi_loc_text_1">Note: You can set up your phone using Wi-Fi, but you won’t be able to make or receive calls until your phone has been activated on the Verizon network.</string>
    <string name="wifi_loc_text_2">Also, you won’t be able to make emergency calls, after this screen until you finish the Setup Wizard.</string>
    <string name="loc_info_title">Location Information</string>
    <string name="emergency">Emergency call (911)</string>
    <string name="service_plan_message">"You haven't activated your phone yet.

You will not be able to make phone calls, send text messages or use the Internet on the Verizon network.

To activate your phone later, go to Settings -> View Verizon Account."</string>
    <string name="back_to_plan_selection">Back to Activation</string>
    <string name="service_plan_title">Not Activated</string>
    <string name="skip_activation">Exit Activation</string>
    <string name="activate_now">Activate Now</string>
    <string name="poweroff">Power Off</string>
    <string name="ready_to_activate">Ready to activate</string>
    <string name="verizon_vzsecurity_name">Digital Secure</string>
    <string name="verizon_vzsecurity_accept">ACCEPT</string>
    <string name="verizon_vzsecurity_context">Digital Secure gives you free Wi-Fi security, system checks; and scans for viruses, malware and app privacy threats. Data usage applies.</string>
    <string name="verizon_vzsecurity_permission">For more details on why these permissions are needed, open the Security &amp; Privacy app after setup is complete.</string>
    <string name="verizon_vzsecurity_privacy">Allow Digital Secure to access your mobile number to confirm eligibility and your photos, media and other storage on your device to scan for viruses and other malware. You can manage these permissions any time from your device Settings.</string>
    <string name="verizon_vzsecurity_terms">"By tapping &lt;b>Accept&lt;/b>, you give Digital Secure the permissions described above, and agree to the Digital Secure &lt;a href=%1$s>Terms &amp; Conditions&lt;/a> and &lt;a href=%2$s>Privacy Policy&lt;/a>."</string>
    <string name="setup_strings_skip">Skip</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
</resources>