<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="13.0dip"
    android:paddingRight="13.0dip">

    <TextView
        android:id="@+id/plan_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/service_plan_title"
        android:textSize="36.0sp" />

    <TextView
        android:id="@+id/plan_text"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:fontFamily="roboto-regular"
        android:text="@string/service_plan_message"
        android:textSize="16.0sp" />

    <Button
        android:id="@+id/emergency_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:fontFamily="roboto-regular"
        android:onClick="onclickEmergencyCall"
        style="@style/SetupWizardButtonStyleColored"
        android:text="@string/emergency" />

    <Button
        android:id="@+id/return_to_plan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:fontFamily="roboto-regular"
        android:onClick="onclickReturn"
        style="@style/SetupWizardButtonStyleColored"
        android:text="@string/back_to_plan_selection" />

    <Button
        android:id="@+id/skip_activation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:fontFamily="roboto-regular"
        android:onClick="onclickSkip"
        style="@style/SetupWizardButtonStyleColored"
        android:text="@string/skip_activation" />
</LinearLayout>