<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/poa_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/po_authentication_title"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />

    <com.odm.setupwizardoverlay.view.ScrollViewExt
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24.0dip"
                android:layout_marginRight="24.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_enterBillingPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="roboto-medium"
                    android:text="@string/enterBillingPassword"
                    android:textSize="22sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_enterSsn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="roboto-medium"
                    android:text="@string/enterSsn"
                    android:textSize="22sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    >
                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/tv_billing_passwd_another_way"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="roboto-medium"
                    android:text="@string/billing_passwd_another_way"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_what_is_billing_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="roboto-medium"
                    android:text="@string/what_is_billing_passwd"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_switch_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Switch"
                android:textAllCaps="false"
                android:visibility="gone"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:text="Verify"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true" />
            <!--                android:visibility="gone"-->

        </LinearLayout>

    </com.odm.setupwizardoverlay.view.ScrollViewExt>

</RelativeLayout>
